--- a/src/Gemini.Core/appsettings.json
+++ b/src/Gemini.Core/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //开发环境
+    "Test_DB": "Data Source=192.168.144.44;User ID=kshrsa;Password=kshr@nanjin.com;database=DB_TEST;"
+    //生产环境
+  }
 }
